syntax = "proto3";

package Protocol;
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Google.Protobuf.Protocol";

enum MsgId {
  S_ENTER_GAME = 0;
  S_LEAVE_GAME = 1;
  S_SPAWN = 2;
  S_DESPAWN = 3;
  C_MOVE = 4;
  S_MOVE = 5;
}

enum ObjectState {
  IDLE = 0;
  MOVING = 1;
  SKILL1 = 2;
  SKLLL2 = 3;
  HIT = 4;
  DEAD = 5;
}

enum ObjectType
{
	DEFAULT =0,
	PLAYER = 1,
	MONSTER = 2,
	ITEM = 3,
	OBSTACLE = 4,
	PLAYERATTACK= 5,
	MONSTERATTACK= 6,
	END = 7,
}

enum SceneType
{
	TOWN =0,
	BOSS = 1,
	DESERT = 2,
}

message MoveDir {
	float dirX = 1;
	float dirY = 2;
	float dirZ = 3;
}

message SkillType{
	
}

message S_EnterGame {
  int playerId = 1;
}

message S_LeaveGame {
}

message S_Spawn {
  repeated ObjectInfo players = 1;
}

message S_Despawn {
  repeated int32 playerIds = 1;
}

message C_Move {
  PositionInfo posInfo = 1;
}

message C_Skill{

}

message S_Other_Move{
	bool ok = 1;
	PositionInfo posInfo = 2;
}

message S_Move {
  int32 objectId = 1;
  PositionInfo posInfo = 2;
}

message ObjectInfo {
  int32 objectId = 1;
  string name = 2;
  PositionInfo posInfo = 3;
}

message PositionInfo {
  ObjectState state = 1;
  MoveDir moveDir = 2;

  float posX = 3;
  float posY = 4;
  float posZ = 5;
}